--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,59 +1,54 @@
-name: Node.js CI
+name: deploy
 
 on:
-  pull_request:
-    branches: [ master ]
   push:
-    branches: [ master ]
-permissions:
-  contents: read
+    branches: [ "main" ]
 
 jobs:
-  test:
-    name: Test
+
+  build:
+
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x]
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    - uses: actions/checkout@v3  
+    - name: Set up Node.js 
+      uses: actions/setup-node@v3.5.1
       with:
-        node-version: ${{ matrix.node-version }}
-    - uses: actions/cache@v3
+        node-version: 18.x
+    - name: npm set
+      run: |
+        npm install
+        npm run build 
+    - name: login docker serve
+      uses: docker/login-action@v2.1.0
       with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-    - run: npm ci
-      name: Install dependencies
-    - name: Test
-      env:
-        NCM_API_TEST_LOGIN_COUNTRY_CODE: ${{ secrets.NCM_API_TEST_LOGIN_COUNTRY_CODE }}
-        NCM_API_TEST_LOGIN_PHONE: ${{ secrets.NCM_API_TEST_LOGIN_PHONE }}
-        NCM_API_TEST_LOGIN_PASSWORD: ${{ secrets.NCM_API_TEST_LOGIN_PASSWORD }}
-      run: npm test
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x]
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v3.2.0
       with:
-        node-version: ${{ matrix.node-version }}
-    - uses: actions/cache@v3
+        context: .
+        push: true
+        tags: ${{secrets.DOCKERHUB_USERNAME}}/serve:latest
+    - name: ssh pipelines
+      uses: cross-the-world/ssh-pipeline@master
       with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-    - run: npm ci
-      name: Install dependencies
-    - name: Lint
-      run: npm run lint
+        host: ${{ secrets.TCS_HOST }}
+        user: ${{ secrets.TCS_USER }}
+        pass: ${{ secrets.TCS_PASS }}
+        port: ${{ secrets.TCS_PORT }}
+        connect_timeout: 10s
+        script: |
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/serve:latest
+          docker stop serve
+          docker rm serve
+          docker run -dp 3000:3000 --name serve ${{ secrets.DOCKERHUB_USERNAME }}/serve:latest
+          
+      
+      
+      
+      
+      
+      
+      
